// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./PusMmePacket.proto";


package pusModelEditorMessages.protobuf;

message PusMmeModel {
extensions 6 to 106;

  optional ccsds_mal.protobuf.UINTEGER status = 1;
  optional ccsds_mal.protobuf.ULONG uniqueId = 2;
  repeated pusModelEditorMessages.protobuf.PusMmePacket pusMmePacket = 3;
  optional ccsds_mal.protobuf.UINTEGER noHkPackets = 4;
  optional ccsds_mal.protobuf.UINTEGER noDiagPackets = 5;
}
